the priority of nzb-file can now be set when adding local-file via web-interface; JSON/XML-RPC method <append> extended with parameter <priority>
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@466 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/index.html
+++ b/webui/index.html
@@ -1061,7 +1061,7 @@
 					<label class="control-label" for="AddDialog_Priority">Priority</label>
 					<div class="controls">
 						<select id="AddDialog_Priority">
-						</select> &nbsp;(only for URLs)
+						</select>
 					</div>
 				</div>
 
@@ -1120,7 +1120,8 @@
 			</li>
 			<li>You can drag and drop files directly onto the downloads page without clicking on the <strong>Add</strong> button first.
 			The <strong>Add Dialog</strong> will show automatically.</li>
-			<li>Currently the priority can be set only when adding from URL. When submitting local files change their priorities after the adding to queue. This will be improved in future versions.</li>
+			<li>Priority and category can be changed later in the edit dialog.</li>
+			<li>To setup categories please edit file <strong>categories.txt</strong> in webui-directory.</li>
 			<li>Use button <strong>Scan</strong> if the automatic scanning of incoming nzb-directory is disabled (see options <em>NzbDir</em> and <em>NzbDirInterval</em>).</li>
 		</ul>
 	</div>
