categories available in web-interface are now configured in program configuration file (nzbget.conf) instead of a separate file <webui/categories.txt> and can therefore be added and changed via web-interface on settings page
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@471 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/index.html
+++ b/webui/index.html
@@ -874,7 +874,7 @@
 	<h3>Help: Configuring categories</h3>
 	</div>
 	<div class="modal-body">
-	To setup categories please edit file <strong>categories.txt</strong> in webui-directory.
+	The categories can be configured in section <strong>CATEGORIES</strong> on settings page.
 	</div>
 </div>
 
@@ -1121,7 +1121,7 @@
 			<li>You can drag and drop files directly onto the downloads page without clicking on the <strong>Add</strong> button first.
 			The <strong>Add Dialog</strong> will show automatically.</li>
 			<li>Priority and category can be changed later in the edit dialog.</li>
-			<li>To setup categories please edit file <strong>categories.txt</strong> in webui-directory.</li>
+			<li>The categories can be configured in section <strong>CATEGORIES</strong> on settings page.</li>
 			<li>Use button <strong>Scan</strong> if the automatic scanning of incoming nzb-directory is disabled (see options <em>NzbDir</em> and <em>NzbDirInterval</em>).</li>
 		</ul>
 	</div>
