--- a/webui/index.html
+++ b/webui/index.html
@@ -538,7 +538,7 @@
 
 <div class="modal hide" id="InfoDialog">
 	<div class="modal-header">
-	<button type="button" class="close" data-dismiss="modal">×</button>
+	<a class="close" href='#' data-dismiss="modal"><i class="icon-close"></i></a>
 	<h3>NZBGet <span id="version">version</h3>
 	</div>
 	<div class="modal-body">
@@ -586,7 +586,7 @@
 
 <div class="modal modal-mini hide" id="StatDialog">
 	<div class="modal-header">
-	<button type="button" class="close" data-dismiss="modal">×</button>
+	<a class="close" href='#' data-dismiss="modal"><i class="icon-close"></i></a>
 	<h3>Statistics and Status</h3>
 	</div>
 	<div class="modal-body">
@@ -604,7 +604,7 @@
 
 <div class="modal modal-mini hide" id="LimitDialog">
 	<div class="modal-header">
-	<button type="button" class="close" data-dismiss="modal">×</button>
+	<a class="close" href='#' data-dismiss="modal"><i class="icon-close"></i></a>
 	<h3>Speed Limit</h3>
 	</div>
 	<div class="modal-body">
@@ -633,7 +633,7 @@
 
 <div class="modal hide" id="PauseHelp">
 	<div class="modal-header">
-	<button type="button" class="close" data-dismiss="modal">×</button>
+	<a class="close" href='#' data-dismiss="modal"><i class="icon-close"></i></a>
 	<h3>Help: Explaining pause options</h3>
 	</div>
 	<div class="modal-body">
@@ -652,15 +652,16 @@
 
 <div class="modal hide" id="DownloadsEdit">
 	<div class="modal-header">
-		<button class="close" data-dismiss="modal">×</button>
+		<a class="close" href='#' data-dismiss="modal"><i class="icon-close"></i></a>
+		<a class="back" id="DownloadsEdit_Back" href="#" title="Back"><i class="icon-back"></i></a>
+		<a class="back back-hidden" id="DownloadsEdit_BackSpace"><i class="icon-hidden"></i></a>
 		<h3 id ="DownloadsEdit_Title">Title</h3>
 	</div>
 
 	<div class="modal-body">
 
-		<div class="tab-content">
-			<div class="tab-pane active" id="DownloadsEdit_GeneralTab">
-				<a class="hide" href="#DownloadsEdit_GeneralTab" id="DownloadsEdit_GeneralTabLink" data-toggle="tab"></a>
+		<div class="">
+			<div class="modal-tab" id="DownloadsEdit_GeneralTab">
 				<form class="form-horizontal">
 					<fieldset>
 
@@ -702,8 +703,8 @@
 						<div class="control-group" id="DownloadsEdit_PostProcessingGroup">
 							<label class="control-label" for="DownloadsEdit_PostProcessingLabel">Post-Processing</label>
 							<div class="controls">
-								<a class="btn hide" href="#DownloadsEdit_PostProcessingTab" data-toggle="tab">Parameters</a>
-								<a class="btn" href="#DownloadsEdit_LogTab" data-toggle="tab" id="DownloadsEdit_Log">Messages</a>
+								<a class="btn" href="#" data-tab="DownloadsEdit_ParamTab" id="DownloadsEdit_Param">Parameters <i class="icon-forward" style="opacity:0.6;"></i></a>
+								<a class="btn" href="#" data-tab="DownloadsEdit_LogTab" id="DownloadsEdit_Log">Messages <i class="icon-forward" style="opacity:0.6;"></i></a>
 							</div>
 						</div>
 
@@ -711,24 +712,14 @@
 				</form>
 			</div>
 
-			<div class="tab-pane" id="DownloadsEdit_PostProcessingTab">
+			<div class="modal-tab hide" id="DownloadsEdit_ParamTab">
 				<form class="form-horizontal">
-					<fieldset>
-						<div class="alert alert-info alert-block hide">
-							<h4 class="alert-heading">Parameters not available.</h4>
-							<p>The post-processing script you are currently using doesn't support post-processing parameters or the script configuration file is not properly set in NZBGet settings.</p>
-						</div>
-						<div class="alert alert-info alert-block">
-							<h4 class="alert-heading">Not yet implemented.</h4>
-							<p>This page is a placeholder. The editing of post-processing parameters is not supported in web-interface yet.</p>
-						</div>
-
-						<a class="btn" href="#DownloadsEdit_GeneralTab" data-toggle="tab">Go Back</a>
+					<fieldset id="DownloadsEdit_ParamData">
 					</fieldset>
 				</form>
 			</div>
 
-			<div class="tab-pane" id="DownloadsEdit_LogTab">
+			<div class="modal-tab hide" id="DownloadsEdit_LogTab">
 				<form class="form-horizontal">
 					<fieldset>
 						<div class="row-fluid">
@@ -738,8 +729,6 @@
 						<table class="table table-striped table-bordered" id="DownloadsEdit_LogTable" style="margin-bottom:15px;">
 							<tbody></tbody>
 						</table>
-
-						<a class="btn" href="#DownloadsEdit_GeneralTab" data-toggle="tab">Go Back</a>
 						<div class="pull-right"><div class="pagination" id ="DownloadsEdit_LogTable_pager"></div></div>
 					</fieldset>
 				</form>
@@ -775,6 +764,7 @@
 		</div>
 
 		<div class="dialog-transmit hide" style="position:absolute;margin-left:260px;" id="DownloadsEdit_Transmit"><img src="img/transmit.gif"></div>
+		<!-- <a href="#DownloadsEdit_GeneralTab" class="btn" data-toggle="tab" id="DownloadsEdit_Back">Back</a> -->
 		<a href="#" class="btn" data-dismiss="modal" id="DownloadsEdit_Close">Close</a>
 		<a href="#" class="btn btn-primary" id="DownloadsEdit_Save">Save changes</a>
 	</div>
@@ -784,7 +774,7 @@
 
 <div class="modal hide" id="DownloadsMulti">
 	<div class="modal-header">
-		<button class="close" data-dismiss="modal">×</button>
+		<a class="close" href='#' data-dismiss="modal"><i class="icon-close"></i></a>
 		<h3 id ="DownloadsMulti_Title">Multiple records</h3>
 	</div>
 
@@ -870,7 +860,7 @@
 
 <div class="modal modal-mini modal-center hide" id="ConfigureCategoriesHelp">
 	<div class="modal-header">
-	<button type="button" class="close" data-dismiss="modal">×</button>
+	<a class="close" href='#' data-dismiss="modal"><i class="icon-close"></i></a>
 	<h3>Help: Configuring categories</h3>
 	</div>
 	<div class="modal-body">
@@ -882,7 +872,7 @@
 
 <div class="modal hide" id="HistoryEdit">
 	<div class="modal-header">
-		<button class="close" data-dismiss="modal">×</button>
+		<a class="close" href='#' data-dismiss="modal"><i class="icon-close"></i></a>
 		<h3 id="HistoryEdit_Title"></h3>
 	</div>
 
@@ -956,7 +946,7 @@
 
 <div class="modal modal-mini modal-center hide" id="ConfirmDialog">
 	<div class="modal-header">
-		<button class="close" data-dismiss="modal">×</button>
+		<a class="close" href='#' data-dismiss="modal"><i class="icon-close"></i></a>
 		<h3 id="ConfirmDialog_Title">Title</h3>
 	</div>
 
@@ -1031,7 +1021,7 @@
 
 <div class="modal hide" id="AddDialog">
 	<div class="modal-header">
-		<button class="close" data-dismiss="modal">×</button>
+		<a class="close" href='#' data-dismiss="modal"><i class="icon-close"></i></a>
 		<h3>Add NZB-Files to Download Queue</h3>
 	</div>
 
@@ -1100,7 +1090,7 @@
 
 <div class="modal hide" id="AddDialogHelp">
 	<div class="modal-header">
-	<button type="button" class="close" data-dismiss="modal">×</button>
+	<a class="close" href='#' data-dismiss="modal"><i class="icon-close"></i></a>
 	<h3>Help: Tips for adding NZB-Files</h3>
 	</div>
 	<div class="modal-body">
@@ -1131,7 +1121,7 @@
 
 <div class="modal modal-padded hide" id="DownloadsMerge">
 	<div class="modal-header">
-		<button class="close" data-dismiss="modal">×</button>
+		<a class="close" href='#' data-dismiss="modal"><i class="icon-close"></i></a>
 		<h3>Merge Downloads</h3>
 	</div>
 
@@ -1157,7 +1147,7 @@
 
 <div class="modal modal-mini modal-center hide" id="ConfigNewOptionHelp">
 	<div class="modal-header">
-	<button type="button" class="close" data-dismiss="modal">×</button>
+	<a class="close" href='#' data-dismiss="modal"><i class="icon-close"></i></a>
 	<h3>Help: New configuration option</h3>
 	</div>
 	<div class="modal-body">
