renamed options <ServerIP>, <ServerPort> and <ServerPassword> to <ControlIP>, <ControlPort> and <ControlPassword> to avoid confusion with news-server options <ServerX.Host>, <ServerX.Port> and <ServerX.Password>; the old option names are still recognized and are automatically renamed when the configuration is saved from web-interface; also renamed option <> to <MainDir>
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@477 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/index.html
+++ b/webui/index.html
@@ -454,7 +454,7 @@
 									<h4>NZBGet settings</h4>
 									<p>
 									With these settings you configure NZBGet. When you configure NZBGet for the first time you need
-									to check at least the option <a class="option" href="#" data-category="S" onclick="config_scrollToOption(event, this)">$MainDir</a> and configure one news server.
+									to check at least the option <a class="option" href="#" data-category="S" onclick="config_scrollToOption(event, this)">MainDir</a> and configure one news server.
 									Any changes of NZBGet settings require a restart or reload (soft-restart) of NZBGet.
 									</p>
 
