--- a/webui/index.html
+++ b/webui/index.html
@@ -40,8 +40,8 @@
 	<script language="javascript" type="text/javascript" src="lib/bootstrap.js"></script>
 
 	<!-- NZBGet -->
-	<script language="javascript" type="text/javascript" src="fasttable.js"></script>
 	<script language="javascript" type="text/javascript" src="util.js"></script>
+	<script language="javascript" type="text/javascript" src="fasttable.js"></script>
 	<script language="javascript" type="text/javascript" src="index.js"></script>
 	<script language="javascript" type="text/javascript" src="downloads.js"></script>
 	<script language="javascript" type="text/javascript" src="edit.js"></script>
@@ -187,6 +187,13 @@
 	Please wait.
 </div>
 
+<!-- *** UNSUPPORTED BROWSER: IE < 9 *************************************************** -->
+<div class="alert alert-danger alert-block unsupported-browser" style="display:none;" id="UnsupportedBrowserIE8">
+	<h4 class="alert-heading" id="RPCError-title">Unsupported browser!</h4>
+	<p>Sorry but this application doesn't work with Internet Explorer versions below 9. Please
+	upgrade to at least IE 9 or use another browser.</p>
+</div>
+
 <!-- *** CONTENT ************************************************************ -->
 
 <div class="container-fluid" id="MainContent">
@@ -264,7 +271,7 @@
 				<div id="DownloadsTable_info"></div>
 			</div>
 
-			<div class="alert alert-info alert-block hide" style="margin-top:6px;" id="DownloadQueueEmpty">
+			<div class="alert alert-info alert-block hide" style="margin-top:-15px;" id="DownloadQueueEmpty">
 				<h4 class="alert-heading">Download queue is empty.</h4>
 				 To add downloads click Add button or put nzb-files into incoming nzb-directory (option <em>NzbDir</em>).
 			</div>
@@ -280,10 +287,6 @@
 
 			<div class="btn-toolbar form-inline section-toolbar">
 				<div class="btn-group">
-				<!--
-					<button class="btn" onclick="" title="Post-process selected records again"><i class="icon-wrench"></i> Reprocess</button>
-					<button class="btn" onclick="" title="Return selected records to download queue"><i class="icon-download"></i> Return</button>
-				-->
 					<button class="btn" onclick="history_delete_click()" title="Delete selected records"><i class="icon-trash"></i><span class="btn-caption"> Delete</span></button>
 				</div>
 
@@ -660,7 +663,7 @@
 
 	<div class="modal-body">
 
-		<div class="">
+		<div>
 			<div class="modal-tab" id="DownloadsEdit_GeneralTab">
 				<form class="form-horizontal">
 					<fieldset>
@@ -690,7 +693,7 @@
 							</div>
 						</div>
 
-						<div class="control-group" id="DownloadsEdit_StatisticsGroup">
+						<div class="control-group control-group-last" id="DownloadsEdit_StatisticsGroup">
 							<label class="control-label" for="DownloadsEdit_Statistics">Statistics</label>
 							<div class="controls">
 							<table class="table table-striped table-bordered data-statistics">
@@ -700,11 +703,13 @@
 							</div>
 						</div>
 
-						<div class="control-group" id="DownloadsEdit_PostProcessingGroup">
-							<label class="control-label" for="DownloadsEdit_PostProcessingLabel">Post-Processing</label>
+						<div class="control-group">
 							<div class="controls">
-								<a class="btn" href="#" data-tab="DownloadsEdit_ParamTab" id="DownloadsEdit_Param">Parameters <i class="icon-forward" style="opacity:0.6;"></i></a>
-								<a class="btn" href="#" data-tab="DownloadsEdit_LogTab" id="DownloadsEdit_Log">Messages <i class="icon-forward" style="opacity:0.6;"></i></a>
+								<div class="modal-bottom-toolbar">
+									<button class="btn" data-tab="DownloadsEdit_FileTab" data-fullscreen="true" id="DownloadsEdit_File">Files <i class="icon-forward" style="opacity:0.6;"></i></button>
+									<button class="btn" data-tab="DownloadsEdit_ParamTab" id="DownloadsEdit_Param" title="Post-processing parameters">PP Parameters <i class="icon-forward" style="opacity:0.6;"></i></button>
+									<button class="btn" data-tab="DownloadsEdit_LogTab" data-fullscreen="true" id="DownloadsEdit_Log" title="Post-processing messages">PP Messages <i class="icon-forward" style="opacity:0.6;"></i></button>
+								</div>
 							</div>
 						</div>
 
@@ -712,6 +717,48 @@
 				</form>
 			</div>
 
+			<div class="modal-tab hide" id="DownloadsEdit_FileTab">
+				<div class="loading-block">
+					<img src="img/transmit.gif"></img>
+				</div>
+				<div>
+					<div class="row-fluid">
+						<div class="pull-left btn-toolbar form-inline modal-toolbar">
+							<!-- EDIT BUTTONS -->
+							<div class="btn-group phone-hide">
+								<button class="btn" onclick="edit_group_files_edit_click('pause')" title="Pause selected files"><i class="icon-pause"></i><span class="btn-caption"> Pause</span></button>
+								<button class="btn" onclick="edit_group_files_edit_click('resume')" title="Resume selected files"><i class="icon-play"></i><span class="btn-caption"> Resume</span></button>
+								<button class="btn" onclick="edit_group_files_edit_click('delete')" title="Delete selected files"><i class="icon-trash"></i><span class="btn-caption"> Delete</span></button>
+							</div>
+							<div class="btn-group phone-only inline"><button class="btn" onclick="edit_group_files_edit_click('pause')" title="Pause selected files"><i class="icon-pause"></i><span class="btn-caption"> Pause</span></button></div>
+							<div class="btn-group phone-only inline"><button class="btn" onclick="edit_group_files_edit_click('resume')" title="Resume selected files"><i class="icon-play"></i><span class="btn-caption"> Resume</span></button></div>
+							<div class="btn-group phone-only inline"><button class="btn" onclick="edit_group_files_edit_click('delete')" title="Delete selected files"><i class="icon-trash"></i><span class="btn-caption"> Delete</span></button></div>
+
+							<!-- MOVE BUTTONS -->
+							<div class="btn-group phone-hide">
+								<button class="btn" onclick="edit_group_files_edit_click('top')" title="Move selected files to the top"><i class="icon-top"></i></button>
+								<button class="btn" onclick="edit_group_files_edit_click('up')" title="Move selected files up"><i class="icon-up"></i></button>
+								<button class="btn" onclick="edit_group_files_edit_click('down')" title="Move selected files down"><i class="icon-down"></i></button>
+								<button class="btn" onclick="edit_group_files_edit_click('bottom')" title="Move selected files to the bottom"><i class="icon-bottom"></i></button>
+							</div>
+							<div class="btn-group phone-only inline"><button class="btn" onclick="edit_group_files_edit_click('top')" title="Move selected files to the top"><i class="icon-top"></i></button></div>
+							<div class="btn-group phone-only inline"><button class="btn" onclick="edit_group_files_edit_click('up')" title="Move selected files up"><i class="icon-up"></i></button></div>
+							<div class="btn-group phone-only inline"><button class="btn" onclick="edit_group_files_edit_click('down')" title="Move selected files down"><i class="icon-down"></i></button></div>
+							<div class="btn-group phone-only inline"><button class="btn" onclick="edit_group_files_edit_click('bottom')" title="Move selected files to the bottom"><i class="icon-bottom"></i></button></div>
+						</div>
+						<div class="pull-right" style="margin-bottom:10px;"><input id="DownloadsEdit_FileTable_filter" class="search-query" placeholder="Search" type="text"></div>
+					</div>
+
+					<div id="DownloadsEdit_FileBlock">
+						<table class="table table-striped table-bordered table-check table-cancheck datatable" id="DownloadsEdit_FileTable" style="margin-bottom:15px;">
+							<thead><tr><th><div class="check img-check"></div></th><th>Status</th><th>Name</th><th class="text-right">Age</th><th class="text-right">Size</th></tr></thead>
+							<tbody></tbody>
+						</table>
+					</div>
+					<div class="hide"><div class="pagination" id ="DownloadsEdit_FileTable_pager"></div></div>
+				</div>
+			</div>
+			
 			<div class="modal-tab hide" id="DownloadsEdit_ParamTab">
 				<form class="form-horizontal">
 					<fieldset id="DownloadsEdit_ParamData">
@@ -720,20 +767,21 @@
 			</div>
 
 			<div class="modal-tab hide" id="DownloadsEdit_LogTab">
-				<form class="form-horizontal">
-					<fieldset>
-						<div class="row-fluid">
-							<div class="pull-left">Post-Processing Messages</div>
-							<div class="pull-right" style="margin-bottom:10px;"><input id="DownloadsEdit_LogTable_filter" class="search-query" placeholder="Search" type="text"></div>
-						</div>
-						<table class="table table-striped table-bordered" id="DownloadsEdit_LogTable" style="margin-bottom:15px;">
+				<div>
+					<div class="row-fluid">
+						<div class="pull-left">Post-Processing Messages</div>
+						<div class="pull-right" style="margin-bottom:10px;"><input id="DownloadsEdit_LogTable_filter" class="search-query" placeholder="Search" type="text"></div>
+					</div>
+					<div id="DownloadsEdit_LogBlock">
+						<table class="table table-striped table-bordered datatable" id="DownloadsEdit_LogTable" style="margin-bottom:15px;">
+							<thead><tr><th width="65px">Kind</th><th width="170px" class="text-center">Time</th><th>Text</th></tr></thead>
 							<tbody></tbody>
 						</table>
-						<div class="pull-right"><div class="pagination" id ="DownloadsEdit_LogTable_pager"></div></div>
-					</fieldset>
-				</form>
+					</div>
+					<div class="pull-right hide" id="DownloadsEdit_LogTable_pagerBlock"><div class="pagination" id ="DownloadsEdit_LogTable_pager"></div></div>
+				</div>
 			</div>
-
+			
 		</div>
 
 	</div>
@@ -1252,6 +1300,10 @@
 
 <div id="Notif_Downloads_CheckPostProcess" data-duration="2000" class="alert alert-error alert-center alert-center-medium hide">
     <strong>Post-processing-downloads cannot be edited</strong>
+</div>
+
+<div id="Notif_Edit_Select" data-duration="2000" class="alert alert-error alert-center alert-center-small hide">
+    <strong>Please select records first</strong>
 </div>
 
 <div id="Notif_History_Deleted" data-duration="1000" class="alert alert-inverse alert-center alert-center-small hide">
