now using minified versions of libraries for better performance and smaller size
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@497 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/index.html
+++ b/webui/index.html
@@ -36,8 +36,8 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
 	<!-- Libraries -->
-	<script language="javascript" type="text/javascript" src="lib/jquery.js"></script>
-	<script language="javascript" type="text/javascript" src="lib/bootstrap.js"></script>
+	<script language="javascript" type="text/javascript" src="lib/jquery.min.js"></script>
+	<script language="javascript" type="text/javascript" src="lib/bootstrap.min.js"></script>
 
 	<!-- NZBGet -->
 	<script language="javascript" type="text/javascript" src="fasttable.js"></script>
