--- a/webui/index.html
+++ b/webui/index.html
@@ -51,6 +51,7 @@
 	<script language="javascript" type="text/javascript" src="upload.js"></script>
 	<script language="javascript" type="text/javascript" src="config.js"></script>
 
+	<style>.hide{display:none;}</style>
 	<link rel="stylesheet" type="text/css" href="lib/bootstrap.css" />
 	<link rel="stylesheet" type="text/css" href="style.css" />
 
@@ -187,6 +188,9 @@
 	<h4 class="alert-heading">Unsupported browser!</h4>
 	<p>Sorry but this application doesn't work with Internet Explorer versions below 9. Please
 	upgrade to at least IE 9 or use another browser.</p>
+	<p>If you believe you are getting this message by mistake, please check
+	whether the compatibility mode is active in IE and switch it off to activate
+	all browser functionality required for the application.</p>
 </div>
 
 <!-- *** CONTENT ************************************************************ -->
