--- a/webui/index.html
+++ b/webui/index.html
@@ -332,7 +332,7 @@
 
 			<div class="btn-toolbar form-inline section-toolbar">
 				<div class="btn-group">
-					<button class="btn" onclick="TODO()" title="Delete all messages"><i class="icon-trash"></i> <span class="btn-caption">Clear</span></button>
+					<button class="btn" onclick="Messages.clearClick()" title="Delete all messages"><i class="icon-trash"></i> <span class="btn-caption">Clear</span></button>
 				</div>
 <!--
 				<div class="btn-group">
@@ -1076,6 +1076,21 @@
 		</p>
 	</div>
 	<div id="HistoryDeleteConfirmDialog_OK">Delete</div>
+</div>
+
+<!-- *** CLEAR MESSAGES CONFIRMATION DIALOG DATA ***************************************** -->
+
+<div class="hide" id="MessagesClearConfirmDialog">
+	<div id="MessagesClearConfirmDialog_Title">Messages</div>
+	<div id="MessagesClearConfirmDialog_Text">
+		<p>
+		Clear Messages?
+		</p>
+		<p class="confirm-help-block">
+		All log records will be deleted from screen buffer. The log-file remains on disk unchanged.
+		</p>
+	</div>
+	<div id="MessagesClearConfirmDialog_OK">Clear</div>
 </div>
 
 <!-- *** DELETE CONFIG MULTI-OPTION CONFIRMATION DIALOG DATA ***************************************** -->
